CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT("VeritasAudio")

IF(TARGET ${PROJECT_NAME})
RETURN()
ENDIF()

ADD_SUBDIRECTORY(modules/VeritasGPU)

AUX_SOURCE_DIRECTORY(src SOURCES)
AUX_SOURCE_DIRECTORY(src/Utils SOURCES)

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC include)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} VeritasGPU)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} pulse vorbisfile)

TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PUBLIC -std=c++11)
